--- a/app/lp/(3-techincal-docs)/lp-node-rpcs/subscriptions/page.mdx
+++ b/app/lp/(3-techincal-docs)/lp-node-rpcs/subscriptions/page.mdx
@@ -1,10 +1,11 @@
 ---
-
 title: Subscriptions
 
 description: The state chain node has some RPCs and subscriptions that are useful for liquidity providers.
 
 ---
+
+import {Callout} from "nextra/components";
 
 ## Subscriptions
 
@@ -173,11 +174,12 @@ In practice a swap can be expected to appear in at least two websocket notificat
 Note that in the rare case of swaps failing (e.g. due to insufficient liquidity in the pool), they will be re-scheduled for
 the next block, and will appear again in the subscription.
 
-### `cf_subscribe_prewitness_swaps`
+### `cf_subscribe_prewitness_swaps`<span className="badge-danger after:content-['Deprecated']"/>
 
-> [!CAUTION]
->
-> *THIS SUBSCRIPTION IS DEPRECATED. Use [cf_subscribe_scheduled_swaps](#cf_subscribe_scheduled_swaps) instead.*
+
+<Callout type="error">
+    THIS SUBSCRIPTION IS DEPRECATED. Use [cf_subscribe_scheduled_swaps](#cf_subscribe_scheduled_swaps) instead.
+</Callout>
 
 Subscribes to all *potential* incoming swaps of a particular direction. Swaps are only executed after a certain number of block confirmations for each chain, so this RPC allows you to see
 swaps that are *potential* but not yet confirmed. This is useful for liquidity providers to see what swaps are coming in and prepare for them.
@@ -275,7 +277,11 @@ Notification:
    }
 }
 ```
-### `cf_subscribe_pool_price`
+### `cf_subscribe_pool_price` <span className="badge-danger after:content-['Deprecated']"/>
+
+<Callout type="error">
+    THIS SUBSCRIPTION IS DEPRECATED. Use [cf_subscribe_pool_price_v2](#cf_subscribe_pool_price_v2) instead.
+</Callout>
 
 Subscribes to the current price of a pair in a particular direction. This is useful for liquidity providers to see the current price of a pool. Note `{"from_asset": "BTC", "to_asset": "USDC }` is not equivalent to `{"from_asset": "USDC", "to_asset": "BTC"}`, therefore the prices maybe different.
 
