--- a/app/protocol/(1-concepts)/introduction-thesis/page.mdx
+++ b/app/protocol/(1-concepts)/introduction-thesis/page.mdx
@@ -1,6 +1,6 @@
 ---
 
-title: Introduction & Thesis
+title: Introduction and Thesis
 
 description: For over a decade, the primary method of transferring value between blockchains has been the centralised exchange. This reality has limited composability between ecosystems and has made it difficult for specialist or alternative blockchains to be readily adopted by increasingly large Web3 userbases. 
 
