--- a/app/validators/(1-concepts)/reputation-and-slashing/page.mdx
+++ b/app/validators/(1-concepts)/reputation-and-slashing/page.mdx
@@ -6,6 +6,9 @@ description: Validators are generally expected to be honest actors, but penaltie
 
 ---
 
+import { Cards } from "nextra/components";
+import { Callout } from "nextra/components";
+
 ## Reputation & Slashing
 
 Validators are generally expected to be honest actors, but penalties must exist to ensure the reliable performance of Validator duties and for countering subversive behaviour. Validators hold shares in keys which can not be used to move protocol funds unless at least 100 of the 150 maximum Validators are online and can sign transactions. The protocol therefore needs to make sure sufficient penalties exist to incentivise consistent, secure, and high-performance Validators.
@@ -16,10 +19,11 @@ That being said, whilst it's necessary to discourage Validators from going offli
 
 Taking this all into account, Chainflip operates a unified slashing and reputation system that rolls all penalties into a time-based system with both **positive and negative reputation** scores, designed to balance the above considerations.&#x20;
 
-> [!NOTE]
->
-> **Who Does this System Apply to?**
-> The reputation and slashing system only applies to Authorities. Backup Validators don’t necessarily have a reputation and instead are simply not rewarded when offline, and can never be slashed. Their online state is tracked using heartbeat submissions.
+<Callout type="info">
+**Who Does this System Apply to?**
+The reputation and slashing system only applies to Authorities. Backup Validators don’t necessarily have a reputation and instead are simply not rewarded when offline, and can never be slashed. Their online state is tracked using heartbeat submissions.
+
+</Callout>
 
 **Validators start with their reputation at zero (0)**. Until they join the Authority Set, their reputation will stay at 0. Validators can be in one of three onchain states which affect their Reputation score:&#x20;
 
