feat: finish migrating old lp related docs

--- a/app/lp/(1-concepts)/lp-account/page.mdx
+++ b/app/lp/(1-concepts)/lp-account/page.mdx
@@ -10,7 +10,7 @@ description: Chainflip uses the concept of Account Roles to manage permissions b
 
 Chainflip uses the concept of Account Roles to manage permissions between various network actors. Every account on the Chainflip network can go through the lifecycle.
 
-Upon [Funding](funding.mdx) your account, your account will be created without any defined role. This account state is known as `Unregistered`. Unregistered accounts have access to basic functionality on the State Chain, such as redeeming funds and participating in tokenholder governance.
+Upon [Funding](#funding-your-account) your account, your account will be created without any defined role. This account state is known as `Unregistered`. Unregistered accounts have access to basic functionality on the State Chain, such as redeeming funds and participating in tokenholder governance.
 
 In order to integrate in the network, you will need to **register** the account for the [Liquidity Provider](lp.mdx) role.
 
