--- a/app/protocol/(2-guides)/funding-state-chain-account/page.mdx
+++ b/app/protocol/(2-guides)/funding-state-chain-account/page.mdx
@@ -6,7 +6,7 @@ description: $FLIP is issued as an ERC-20 token on Ethereum. This means that in 
 
 ---
 
-## State Chain FLIP Gateway
+## Funding State Chain Account
 
 $FLIP is issued as an ERC-20 token on Ethereum. This means that in order to acquire a balance on the Chainflip State Chain, users have to **fund their State Chain account** in the *StateChainGateway* smart contract.
 
