--- a/app/lp/(3-techincal-docs)/lp-api/requests/page.mdx
+++ b/app/lp/(3-techincal-docs)/lp-api/requests/page.mdx
@@ -513,9 +513,14 @@ curl -H "Content-Type: application/json" -d '{
 
 ### `lp_set_limit_order`
 
-This RPC submits an extrinsic that will set the size of an existing limit order in the specified pool. If you try to set the size of a non-existent order, that will result in a new limit order being created with that id. If you set the size of an order to zero, that will close the order.
+This RPC submits an extrinsic that will set the size of an existing limit order in the specified pool.
+If you try to set the size of a non-existent order,
+that will result in a new limit order being created with that id.
+If you set the size of an order to zero, that will close the order.
 
-It can also be used to change the price of an existing limit order, by setting the optional argument `tick` to the new tick you want, and specifying the `id` of the existing order.
+It can also be used to change the price of an existing limit order,
+by setting the optional argument `tick` to the new tick you want,
+and specifying the `id` of the existing order.
 
 When creating a new order via this method you must specify the `tick` to use, but assuming you don't wish to change the `tick` as described above and you only want to increase or decrease the size of the existing order, you don't need to specify the `tick` in future updates to that order.
 
@@ -528,6 +533,10 @@ Parameters:
 - [`sell_amount`](#amount): The amount of assets the limit order should sell. For "buy" orders, this is measured in the quote asset, and for "sell" orders, this is measured in the base asset.
 - `dispatch_at` (Optional): If specified this RPC instead of submitting an extrinsic that does the specified operation, will submit an extrinsic that schedules the operation to occur at the specified block number. Note the RPC doesn't wait until the operation is scheduled, but only for the extrinsic (to the extent specified by the `wait_for` argument). If the `dispatch_at` block has already elapsed, this method returns an error.
 - [`wait_for`](#wait-for)
+- `close_order_at` (Optional): (available from version 1.10 onwards) If specified this RPC will also schedule the order to be closed at the given block.
+Must be within 3600 blocks of the latest block and larger than the `dispatch_at` argument if provided.
+Note that the scheduled close will still get executed even if the limit order has been updated/closed before the `close_order_at` block.
+In particular, note that a schedule close operation cannot be canceled.
 
 [Response](#wait-for-result):
 - A chronological list of all the [updates](#order-updates) that were made as part of the operation. Each item in the list is a JSON object:
