--- a/app/lp/(1-concepts)/trading-strategies/page.mdx
+++ b/app/lp/(1-concepts)/trading-strategies/page.mdx
@@ -31,5 +31,5 @@ A simple strategy that trades in the `base_asset`/USDC pool, creating sell and b
 and `-spread_tick`, respectively.
 
 Parameters:
-    * spread_tick: [Tick](/lp/lp-api/types/#tick),
-	* base_asset: [Asset](/lp/lp-api/types/#asset),
+    * spread_tick: [Tick](/lp/lp-api/types#tick),
+	* base_asset: [Asset](/lp/lp-api/types#asset),
