--- a/app/lp/(3-techincal-docs)/lp-api/types/page.mdx
+++ b/app/lp/(3-techincal-docs)/lp-api/types/page.mdx
@@ -183,7 +183,7 @@ RPCs that take a `wait_for` parameter when successful will return a object with 
 }
 ```
 
-### Fixed Point Numbers
+### Fixed Point Number
 
 Fixed point numbers work similarly to integers, except instead of the all the bits representing positive integer powers of 2, the lower bits represent negative integer powers of two. For example if you have a normal 8 bit unsigned integer `01011100`, this represents `64 + 16 + 8 + 4 = 92`, but if we treat the same binary as an unsigned fixed point number with 4 fractional bits it would represent `4 + 1 + 0.5 + 0.25 = 5.75`. This is because in the integer case the bit's values are `[128, 64, 32, 16, 8, 4, 2, 1]`, but in the fixed point case they are `[8, 4, 2, 1, 1/2, 1/4, 1/8, 1/16]`. See how there are 4 bits that have fractional/non-integer values.
 <Tabs items={['JavaScript', 'Python']}>
